--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "grunt-mocha-cov":      "^0.3.0",
     "load-grunt-tasks":     "^1.0.0",
     "mocha":                "^2.0.1",
+    "rewire":               "^2.1.2",
     "sinon":                "^1.11.1",
     "sinon-chai":           "^2.6.0",
     "time-grunt":           "^1.0.0",
