--- a/package.json
+++ b/package.json
@@ -30,13 +30,20 @@
     "yargs":  "^1.3.2"
   },
   "devDependencies": {
-    "chai":          "^1.9.2",
-    "coffee-script": "^1.8.0",
-    "docco":         "^0.6.3",
-    "mocha":         "^2.0.1",
-    "sinon":         "^1.11.1",
-    "sinon-chai":    "^2.6.0",
-    "wrench":        "^1.5.8"
+    "chai":                 "^1.9.2",
+    "coffee-script":        "^1.8.0",
+    "docco":                "^0.6.3",
+    "grunt":                "^0.4.5",
+    "grunt-contrib-clean":  "^0.6.0",
+    "grunt-contrib-coffee": "^0.12.0",
+    "grunt-contrib-watch":  "^0.6.1",
+    "grunt-docco":          "^0.3.3",
+    "load-grunt-tasks":     "^1.0.0",
+    "mocha":                "^2.0.1",
+    "sinon":                "^1.11.1",
+    "sinon-chai":           "^2.6.0",
+    "time-grunt":           "^1.0.0",
+    "wrench":               "^1.5.8"
   },
   "license":         "MIT",
   "engines":         {
