--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "grunt-contrib-coffee": "^0.12.0",
     "grunt-contrib-watch":  "^0.6.1",
     "grunt-docco":          "^0.3.3",
+    "grunt-mocha-test":     "^0.12.2",
     "load-grunt-tasks":     "^1.0.0",
     "mocha":                "^2.0.1",
     "sinon":                "^1.11.1",
