--- a/package.json
+++ b/package.json
@@ -44,8 +44,7 @@
     "rewire":               "^2.1.2",
     "sinon":                "^1.11.1",
     "sinon-chai":           "^2.6.0",
-    "time-grunt":           "^1.0.0",
-    "wrench":               "^1.5.8"
+    "time-grunt":           "^1.0.0"
   },
   "license":         "MIT",
   "engines":         {
