--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "chai":                 "^1.9.2",
     "coffee-script":        "^1.8.0",
     "docco":                "^0.6.3",
+    "fs-extra":             "^0.12.0",
     "grunt":                "^0.4.5",
     "grunt-contrib-clean":  "^0.6.0",
     "grunt-contrib-coffee": "^0.12.0",
